--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/invie.css"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
   </head>
   <body>
     <section id="portada" class="portada background"> <!-- portada -->
@@ -12,7 +13,8 @@
         <figure class="logotipo"> <!-- logotipo -->
           <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
         </figure>
-        <nav class="menu"> <!-- menu -->
+        <span class="burguer-menu icon-menu" id="burguer-menu"></span>
+        <nav class="menu" id="menu"> <!-- menu -->
           <ul>
             <li>
               <a href="index.html">Home</a>
@@ -33,9 +35,9 @@
       </div>
     </section>
     <section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
-      <h2>Nuestra guitarras</h2><!-- titulo -->
+      <h2>Nuestras Guitarras</h2><!-- titulo -->
       <article class="guitarra"> <!-- guitarra 1 -->
-        <img class="derecha" src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350"/>
+        <img class="derecha lazy" data-src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350"/>
         <div class="contenedor-guitarra-a">
           <h3 class="title-b">Invie Acustica</h3>
           <ol>
@@ -46,7 +48,7 @@
         </div>
       </article>
       <article class="guitarra b"> <!-- guitarra 2 -->
-        <img class="izquierda" src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350"/>
+        <img class="izquierda lazy" data-src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350"/>
         <div class="contenedor-guitarra-b">
           <h3 class="title-b">Invie Classic</h3>
           <ol>
@@ -60,7 +62,7 @@
     <footer class="footer">
       <div class="contenedor">
         <div class="contacto">
-          <img src="images/invie-white.png" alt="logotipo blanco"/>
+          <img data-src="images/invie-white.png" alt="logotipo blanco" class="lazy"/>
           <a href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
           <a href="mailto:contacto@invie.com"><strong>E-mail</strong> <span>contacto@invie.com</span></a>
         </div>
@@ -101,5 +103,38 @@
         </form>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.5.4/blazy.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.6/hammer.min.js"></script>
+    <script>
+      // Burguer menu
+      var $menu = document.getElementById('menu');
+      var $burguerMenu = document.getElementById('burguer-menu');
+      $burguerMenu.addEventListener('touchstart', toggleMenu);
+      function toggleMenu(){
+        $menu.classList.toggle('active');
+        $burguerMenu.classList.toggle('icon-close');
+      };
+      function showMenu() {
+        $menu.classList.add('active');
+        $burguerMenu.classList.add('icon-close');
+      }
+      function hideMenu() {
+        $menu.classList.remove('active');
+        $burguerMenu.classList.remove('icon-close');
+      }
+      // Burguer menu
+      // Gestos
+      $body = document.body;
+      var bodyHammer = new Hammer($body);
+      bodyHammer.on('swipeleft', hideMenu);
+      bodyHammer.on('swiperight', showMenu);
+      // Gestos
+
+      // Lazy load
+      var bLazy = new Blazy({
+         selector: 'img' // all images
+      });
+      // Lazy load
+    </script>
   </body>
 </html>
